[build-system]
requires = [
    "setuptools",
    "gdal",
    "h5py",
    "numpy",
    "scipy",
    "rasterio",
]
build-backend = "setuptools.build_meta"

[project]
name = "nisar_l2_cube_interpolator"
requires-python = ">=3.10"

description = "NISAR L2 3D metadata datacube interpolator"

# README format is auto-detected from the extension as GitHub-flavored Markdown
readme = "README.md"

authors = [
    { name = "Xiaodong Huang", email = "xiaodong.huang@jpl.nasa.gov" },
]

dependencies = [
    "python",
    "h5py",
    "gdal",
    "numpy",
    "scipy",
    "rasterio",
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "nisar_l2_cube_interpolator.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nisarqa = "nisar_l2_cube_interpolator.__main__:main"